2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>

	* new command-line argument: vegastrike <mission-name>
	* removed old un-needed code (old key-bindings)
	* removed debugging output from my routines
	* removed old data dir from vegastrike/Makefile.am
	* removed data/Makefile from configure.in

	
2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added support for analogue hatswitch, should work now
	* ABKey can now be used on two or more bindings


2001-10-23 Daniel Horn <hellcatv@hotmail.com>

	* added cloaking as a feature
	* added cloaking sound to the config file
	* added cloaking to the AI
	* made it so targetting respected cloaked starships
	* made it so weapons respected cloaked starships
	* added CloakFor AI script that will cloak for N seconds
	* added a cloak keybinding
	* added the basis for fog in the future

2001-10-23 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* changed a lot in in_joystick to support any number of axes
	* added analogue hatswitch parser, but not yet used


2001-10-23 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified firekeyboard so that two keys can have the same command
	  (FireKey)
	* modified flyjoystick to map axis from config file
	* added variables to test1.mission for later use
	
	
2001-10-23 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified main_loop to use xml-missions
	* modified unit_xml/event_xml to output filenames if not found
	* added mission to vs_globals.h
	* call to Mission is done in main.cpp
	* modified test1.mission


2001-10-22 Alexander Rawass <alexannika@users.sourceforge.net>

	* added bindings for joy-buttons
	  works only for some commands
	* ordered .vegastrikerc better
	
	
2001-10-22 Daniel Horn <hellcatv@hotmail.com>
	* modified units to go in <data>/unit/<unitname> or <data>/unit/<factionname>/<unitname>
	* modified textures go either in the "current dir" or in <data>/textures/ for shared textures